[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"


[[bin]]
name = "blog_os"
test = true
bench = false



[dependencies]
bootloader = "0.9.32"
spin = {version= "0.5.2", default-features = false}
volatile = "0.2.6"


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
